--- a/aboutme.html
+++ b/aboutme.html
@@ -7,29 +7,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
 <body>
-    <div class="nav">
-        <a class="a active" href="./index.html"> HOME</a>
-        <a class="b" href="./aboutme.html">ABOUT ME</a>
-        <a class="c" href="./project.html">PROJECT</a>
-        <a class="d" href="./contact.html">CONTACT ME</a>
+
+    <div class="flex-container">
+        <a class="a " href="./index.html"> HOME</a>
+        <a class="b active" href="./ABOUTME.html">ABOUT ME</a>
+        <a class="c" href="./PROJECT.html">PROJECT</a>
+        <a class="d" href="./CONTACT.html">CONTACT ME</a>
     </div>
-    <div class="aboutus" id="about">
-        <p>Hello Friends,<br>
-            welcome to my first wepsit,i'm a Web developer<br>
-            Student at UC Berkeley. I take pride in identifying<br>
-            core proplems and create solutions to eleminate<br>
-            waste and improve productivity.I have a background<br>
-            bachelo's degree in computer science, and working<br>
-            knwledge of diagnose,troubleshoot and repair complex<br>
-            system failure.currently I am performing different<br>
-            tasks of coding bootcamp, where I gained working<br>
-            knowledge with HTML, CSS, and Git to build new website <br>
-            or refactoring Please review my projects below.👇
-        </p>
+
+
+    <div class="box">
+        <div class="imgBx">
+            <img src="./assets/images/mina.jpg">
+        </div>
+        <div class="content">
+            <h2>ABOUT ME</h2>
+            <P>welcome to my first website,<br>I'm a Web developer Student at UC Berkeley.<br> I have a background bachelo's degree in computer science, and working knwledge of diagnose,troubleshoot and repair complex system failure.</P>
+        </div>
     </div>
 
 </body>
