--- a/contact.html
+++ b/contact.html
@@ -7,32 +7,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
 <body>
-    <div class="nav">
-        <a class="a active" href="./index.html"> HOME</a>
+    <div class="flex-container">
+        <a class="a " href="./index.html"> HOME</a>
         <a class="b" href="./aboutme.html">ABOUT ME</a>
         <a class="c" href="./project.html">PROJECT</a>
-        <a class="d" href="./contact.html">CONTACT ME</a>
+        <a class="d active" href="./contact.html">CONTACT ME</a>
     </div>
 
     <footer>
         <div class="container2">
             <div class="row row-cols-2">
-                <div class="col">Column</div>
+
                 <div class="card">
-                    <img src="./images/th (3).jfif" class="card-img-top" alt="...">
+                    <img src="./assets/images/th (3).jfif" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <div class="contact" id="contact">
-                            <img src="./images/OIP.JPG" width="20PX" height="20PX">
+                        <div class="contact" id="CONTACT ME">
+                            <img src="./assets/images/OIP.JPG" width="20PX" height="20PX">
                             <h5> Minamahmood83@gmail.com</h5>
 
-                            <img src="./images/download.JPG" width="20px" height="20px">
+                            <img src="./assets/images/download.JPG" width="20px" height="20px">
                             <h5> minamahmood.github.io</h5>
-                            <img src="./images/th (2).JPG" width="20px" height="20px">
-                            <h5> sone....</h5>
+                            <img src="./assets/images/th (2).JPG " width="20px" height="20px">
+                            <h5> soon....</h5>
                         </div>
                     </div>
                 </div>
