--- a/contact.html
+++ b/contact.html
@@ -12,10 +12,10 @@
 
 <body>
     <div class="flex-container">
-        <a class="a " href="./index.html"> HOME</a>
-        <a class="b" href="./aboutme.html">ABOUT ME</a>
-        <a class="c" href="./project.html">PROJECT</a>
-        <a class="d active" href="./contact.html">CONTACT ME</a>
+        <a class="a " href="index.html"> HOME</a>
+        <a class="b" href="aboutme.html">ABOUT ME</a>
+        <a class="c" href="project.html">PROJECT</a>
+        <a class="d active" href="contact.html">CONTACT ME</a>
     </div>
 
     <footer>
