--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
 
 
             <div class="flex-container">
-                <a class="a active" href="./index.html"> HOME</a>
+                <a class="a active" href="index.html"> HOME</a>
                 <br>
-                <a class="b" href="./aboutme.html">ABOUT ME</a>
+                <a class="b" href="aboutme.html">ABOUT ME</a>
                 <br>
-                <a class="c" href="./project.html">PROJECT</a>
+                <a class="c" href="project.html">PROJECT</a>
                 <br>
-                <a class="d" href="./contact.html">CONTACT ME</a>
+                <a class="d" href="contact.html">CONTACT ME</a>
 
             </div>
 
