--- a/project.html
+++ b/project.html
@@ -15,10 +15,10 @@
 
 <body>
     <div class="flex-container">
-        <a class="a " href="./index.html"> HOME</a>
-        <a class="b" href="./aboutme.html">ABOUT ME</a>
-        <a class="c active" href="./project.html">PROJECT</a>
-        <a class="d" href="./contact.html">CONTACT ME</a>
+        <a class="a " href="index.html"> HOME</a>
+        <a class="b" href="aboutme.html">ABOUT ME</a>
+        <a class="c active" href="project.html">PROJECT</a>
+        <a class="d" href="contact.html">CONTACT ME</a>
     </div>
 
     <div class="row row-cols-1 row-cols-md-2 g-2">
