--- a/aboutme.html
+++ b/aboutme.html
@@ -8,22 +8,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
 
     <div class="flex-container">
-        <a class="a " href="./index.html"> HOME</a>
-        <a class="b active" href="./ABOUTME.html">ABOUT ME</a>
-        <a class="c" href="./PROJECT.html">PROJECT</a>
-        <a class="d" href="./CONTACT.html">CONTACT ME</a>
+        <a class="a " href="index.html"> HOME</a>
+        <a class="b active" href="aboutme.html">ABOUT ME</a>
+        <a class="c" href="project.html">PROJECT</a>
+        <a class="d" href="contact.html">CONTACT ME</a>
     </div>
 
 
     <div class="box">
         <div class="imgBx">
-            <img src="./assets/images/mina.jpg">
+            <img src="assets/images/mina.jpg">
         </div>
         <div class="content">
             <h2>ABOUT ME</h2>
